Free keyframe handles do not snap to frames when duplicating #38411

Closed
opened 2014-01-30 17:56:06 +01:00 by Sam Brubaker · 8 comments

Blender Version: 2.69 official (win 64)

How to Reproduce: Select last Z-location keyframe in graph editor. Press G > X and notice how, during transform, the entire keyframe, along with its handles, snaps to each frame by default. That's the expected behavior. Next, press Shift+D > X and note that while the keyframes snap to each frame, the handles do not.

This is a very minor little bug, but it can lead to precision issues when duplicating keyframes repeatedly. With each iteration, the handles get skewed, requiring the animator to correct the handles.

Blender Version: 2.69 official (win 64) How to Reproduce: Select last Z-location keyframe in graph editor. Press G > X and notice how, during transform, the entire keyframe, along with its handles, snaps to each frame by default. That's the expected behavior. Next, press Shift+D > X and note that while the keyframes snap to each frame, the handles do not. This is a very minor little bug, but it can lead to precision issues when duplicating keyframes repeatedly. With each iteration, the handles get skewed, requiring the animator to correct the handles.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Author

P.S. Here is the attached example. Almost forgot!

Graph_Editor_Snap_Bug.blend

P.S. Here is the attached example. Almost forgot! [Graph_Editor_Snap_Bug.blend](https://archive.blender.org/developer/F75669/Graph_Editor_Snap_Bug.blend)
Sergey Sharybin self-assigned this 2014-02-03 15:01:33 +01:00

Funny bug :) Will have a look.

Funny bug :) Will have a look.

This issue was referenced by blender/blender-addons-contrib@1d260d84ad

This issue was referenced by blender/blender-addons-contrib@1d260d84adf4dcabc9a3533030e926b26faba149

This issue was referenced by 1d260d84ad

This issue was referenced by 1d260d84adf4dcabc9a3533030e926b26faba149

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1d260d84ad.

Closed by commit 1d260d84ad.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38411
No description provided.