Fix T38411: Free keyframe handles do not snap to frames when duplicating